# hide-and-seek

./: .gitignore  LICENSE  MJMODEL.TXT  Makefile  README.md  pyproject.toml  requirements.txt
blog/: index.md
configs/: default.yaml  maze.yaml  quick.yaml
hideseek/: __init__.py  arena_builder.py  config.py  env.py  humanoid.py  match.py  train.py  vision.py  visualize.py
tests/: conftest.py  test_hideseek.py
